// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ForumPure component match expected snapshot with subForumArray 1`] = `
<div
  className="default-Forum-mainContainer"
>
  <withStyles(RowPure)
    className=""
    reverse={false}
  >
    <withStyles(ColumnPure)
      className=""
      lg={9}
      lgOffset=""
      md={5}
      mdOffset=""
      sm=""
      smOffset=""
      xl=""
      xlOffset=""
      xs={12}
      xsOffset=""
    >
      <withStyles(RowPure)
        className=""
        reverse={false}
      >
        <withStyles(ColumnPure)
          className=""
          lg={8}
          lgOffset=""
          md=""
          mdOffset=""
          sm=""
          smOffset=""
          xl=""
          xlOffset=""
          xs={12}
          xsOffset=""
        >
          <withStyles(LinkPure)
            className="default-Forum-bigText"
            to="/Forum/40"
          >
            Вопросы по созданию моделей
          </withStyles(LinkPure)>
          <withStyles(HiddenPure)
            className=""
            lg=""
            md="down"
            sm=""
            xl=""
            xs=""
          >
            <div
              className="default-Forum-smallText"
            >
              Вопросы по созданию моделей, конвертированию в игру и всего что с этим связано.
            </div>
          </withStyles(HiddenPure)>
          <withStyles(HiddenPure)
            className=""
            lg=""
            md="down"
            sm=""
            xl=""
            xs=""
          >
            <div
              className="default-Forum-subForumContainer"
            >
              <withStyles(SubForumPure)
                subForum={
                  Object {
                    "id": 51,
                    "order": 57,
                    "title": "FAQ",
                  }
                }
              />
              <withStyles(SubForumPure)
                subForum={
                  Object {
                    "id": 52,
                    "order": 52,
                    "title": "Юзербары",
                  }
                }
              />
              <withStyles(SubForumPure)
                subForum={
                  Object {
                    "id": 53,
                    "order": 53,
                    "title": "О игре",
                  }
                }
              />
              <withStyles(SubForumPure)
                subForum={
                  Object {
                    "id": 54,
                    "order": 51,
                    "title": "Видео",
                  }
                }
              />
              <withStyles(SubForumPure)
                subForum={
                  Object {
                    "id": 55,
                    "order": 55,
                    "title": "Рассказы",
                  }
                }
              />
              <withStyles(SubForumPure)
                subForum={
                  Object {
                    "id": 56,
                    "order": 56,
                    "title": "Каталог файлов",
                  }
                }
              />
            </div>
          </withStyles(HiddenPure)>
        </withStyles(ColumnPure)>
        <withStyles(ColumnPure)
          className="default-Forum-center default-Forum-topicsMessages"
          lg={2}
          lgOffset=""
          md=""
          mdOffset=""
          sm=""
          smOffset=""
          xl=""
          xlOffset=""
          xs=""
          xsOffset=""
        >
          <withStyles(HiddenPure)
            className=""
            lg="up"
            md=""
            sm=""
            xl=""
            xs=""
          >
            <Connect(Term)
              indentAfter={true}
              term={
                Object {
                  "id": 1,
                  "value": "Topics",
                }
              }
              untermedPostfix=":"
            />
          </withStyles(HiddenPure)>
          4
        </withStyles(ColumnPure)>
        <withStyles(ColumnPure)
          className="default-Forum-center default-Forum-topicsMessages"
          lg={2}
          lgOffset=""
          md=""
          mdOffset=""
          sm=""
          smOffset=""
          xl=""
          xlOffset=""
          xs=""
          xsOffset=""
        >
          <withStyles(HiddenPure)
            className=""
            lg="up"
            md=""
            sm=""
            xl=""
            xs=""
          >
            <Connect(Term)
              indentAfter={true}
              indentBefore={true}
              term={
                Object {
                  "id": 2,
                  "value": "Posts",
                }
              }
              untermedPostfix=":"
            />
          </withStyles(HiddenPure)>
          864
        </withStyles(ColumnPure)>
      </withStyles(RowPure)>
    </withStyles(ColumnPure)>
    <withStyles(ColumnPure)
      className="default-Forum-centerMdUp"
      lg={3}
      lgOffset=""
      md={7}
      mdOffset=""
      sm=""
      smOffset=""
      xl=""
      xlOffset=""
      xs={12}
      xsOffset=""
    >
      <withStyles(RowPure)
        className="default-Forum-disableRowOnSmXs"
        reverse={false}
      >
        <withStyles(ColumnPure)
          className="default-Forum-center"
          lg={12}
          lgOffset=""
          md={6}
          mdOffset=""
          sm=""
          smOffset=""
          xl=""
          xlOffset=""
          xs=""
          xsOffset=""
        >
          <withStyles(HiddenPure)
            className=""
            lg=""
            md=""
            sm="down"
            xl=""
            xs=""
          >
            <withStyles(HiddenPure)
              className=""
              lg=""
              md="down"
              sm=""
              xl=""
              xs=""
            >
              <UserName
                className=""
                color="#00AA00"
                id={4}
                name="Buba"
              />
              <Connect(Term)
                doNotTerm={true}
                indentAfter={true}
                indentBefore={true}
                spaceAfter={true}
                spaceBefore={true}
                untermedPostfix="-"
              />
            </withStyles(HiddenPure)>
            <Connect(RelativeDateTime)
              relativeDateTime={2007-09-06T19:33:09.000Z}
              spaceBefore={true}
            />
          </withStyles(HiddenPure)>
        </withStyles(ColumnPure)>
        <withStyles(ColumnPure)
          className="default-Forum-lastTopicInfoWrapper"
          lg={12}
          lgOffset=""
          md={6}
          mdOffset=""
          sm=""
          smOffset=""
          xl=""
          xlOffset=""
          xs=""
          xsOffset=""
        >
          <div>
            <withStyles(HiddenPure)
              className=""
              lg="up"
              md=""
              sm=""
              xl=""
              xs=""
            >
              <Connect(Term)
                indentAfter={true}
                term={
                  Object {
                    "id": 3,
                    "value": "Last message",
                  }
                }
                untermedPostfix=":"
              />
            </withStyles(HiddenPure)>
            <withStyles(LinkPure)
              className="default-Forum-smallText default-Forum-displayInline"
              to="/Topic/4"
            >
              Exporter Ex Machina for Maya
            </withStyles(LinkPure)>
          </div>
        </withStyles(ColumnPure)>
      </withStyles(RowPure)>
    </withStyles(ColumnPure)>
  </withStyles(RowPure)>
  <div
    className="default-Forum-separator"
  />
</div>
`;

exports[`ForumPure component match expected snapshot without subForumArray 1`] = `
<div
  className="default-Forum-mainContainer"
>
  <withStyles(RowPure)
    className=""
    reverse={false}
  >
    <withStyles(ColumnPure)
      className=""
      lg={9}
      lgOffset=""
      md={5}
      mdOffset=""
      sm=""
      smOffset=""
      xl=""
      xlOffset=""
      xs={12}
      xsOffset=""
    >
      <withStyles(RowPure)
        className=""
        reverse={false}
      >
        <withStyles(ColumnPure)
          className=""
          lg={8}
          lgOffset=""
          md=""
          mdOffset=""
          sm=""
          smOffset=""
          xl=""
          xlOffset=""
          xs={12}
          xsOffset=""
        >
          <withStyles(LinkPure)
            className="default-Forum-bigText"
            to="/Forum/40"
          >
            Вопросы по созданию моделей
          </withStyles(LinkPure)>
          <withStyles(HiddenPure)
            className=""
            lg=""
            md="down"
            sm=""
            xl=""
            xs=""
          >
            <div
              className="default-Forum-smallText"
            >
              Вопросы по созданию моделей, конвертированию в игру и всего что с этим связано.
            </div>
          </withStyles(HiddenPure)>
          <withStyles(HiddenPure)
            className=""
            lg=""
            md="down"
            sm=""
            xl=""
            xs=""
          />
        </withStyles(ColumnPure)>
        <withStyles(ColumnPure)
          className="default-Forum-center default-Forum-topicsMessages"
          lg={2}
          lgOffset=""
          md=""
          mdOffset=""
          sm=""
          smOffset=""
          xl=""
          xlOffset=""
          xs=""
          xsOffset=""
        >
          <withStyles(HiddenPure)
            className=""
            lg="up"
            md=""
            sm=""
            xl=""
            xs=""
          >
            <Connect(Term)
              indentAfter={true}
              term={
                Object {
                  "id": 1,
                  "value": "Topics",
                }
              }
              untermedPostfix=":"
            />
          </withStyles(HiddenPure)>
          4
        </withStyles(ColumnPure)>
        <withStyles(ColumnPure)
          className="default-Forum-center default-Forum-topicsMessages"
          lg={2}
          lgOffset=""
          md=""
          mdOffset=""
          sm=""
          smOffset=""
          xl=""
          xlOffset=""
          xs=""
          xsOffset=""
        >
          <withStyles(HiddenPure)
            className=""
            lg="up"
            md=""
            sm=""
            xl=""
            xs=""
          >
            <Connect(Term)
              indentAfter={true}
              indentBefore={true}
              term={
                Object {
                  "id": 2,
                  "value": "Posts",
                }
              }
              untermedPostfix=":"
            />
          </withStyles(HiddenPure)>
          864
        </withStyles(ColumnPure)>
      </withStyles(RowPure)>
    </withStyles(ColumnPure)>
    <withStyles(ColumnPure)
      className="default-Forum-centerMdUp"
      lg={3}
      lgOffset=""
      md={7}
      mdOffset=""
      sm=""
      smOffset=""
      xl=""
      xlOffset=""
      xs={12}
      xsOffset=""
    >
      <withStyles(RowPure)
        className="default-Forum-disableRowOnSmXs"
        reverse={false}
      >
        <withStyles(ColumnPure)
          className="default-Forum-center"
          lg={12}
          lgOffset=""
          md={6}
          mdOffset=""
          sm=""
          smOffset=""
          xl=""
          xlOffset=""
          xs=""
          xsOffset=""
        >
          <withStyles(HiddenPure)
            className=""
            lg=""
            md=""
            sm="down"
            xl=""
            xs=""
          >
            <withStyles(HiddenPure)
              className=""
              lg=""
              md="down"
              sm=""
              xl=""
              xs=""
            >
              <UserName
                className=""
                color="#00AA00"
                id={4}
                name="Buba"
              />
              <Connect(Term)
                doNotTerm={true}
                indentAfter={true}
                indentBefore={true}
                spaceAfter={true}
                spaceBefore={true}
                untermedPostfix="-"
              />
            </withStyles(HiddenPure)>
            <Connect(RelativeDateTime)
              relativeDateTime={2007-09-06T19:33:09.000Z}
              spaceBefore={true}
            />
          </withStyles(HiddenPure)>
        </withStyles(ColumnPure)>
        <withStyles(ColumnPure)
          className="default-Forum-lastTopicInfoWrapper"
          lg={12}
          lgOffset=""
          md={6}
          mdOffset=""
          sm=""
          smOffset=""
          xl=""
          xlOffset=""
          xs=""
          xsOffset=""
        >
          <div>
            <withStyles(HiddenPure)
              className=""
              lg="up"
              md=""
              sm=""
              xl=""
              xs=""
            >
              <Connect(Term)
                indentAfter={true}
                term={
                  Object {
                    "id": 3,
                    "value": "Last message",
                  }
                }
                untermedPostfix=":"
              />
            </withStyles(HiddenPure)>
            <withStyles(LinkPure)
              className="default-Forum-smallText default-Forum-displayInline"
              to="/Topic/4"
            >
              Exporter Ex Machina for Maya
            </withStyles(LinkPure)>
          </div>
        </withStyles(ColumnPure)>
      </withStyles(RowPure)>
    </withStyles(ColumnPure)>
  </withStyles(RowPure)>
  <div
    className="default-Forum-separator"
  />
</div>
`;
